--- a/dom_dom_dom/dom_dom_dom.css
+++ b/dom_dom_dom/dom_dom_dom.css
@@ -1,11 +1,20 @@
-div {
-    background: black;
+.boxes {
+    background-color: black;
     width: 100px;
     height: 100px;
-    color: white;
+    font-size: 5em;
+    color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
 }
 
-body {
+.button {
+    display: block;
+}
+
+.container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
